# Shapewear-me

./: .gitignore  README.md  alembic.ini  debug.py  main.py  pyproject.toml
app/connectors/: base.py  registry.py
app/connectors/honeylove/: config.yml  connector.py  mappings.py
app/connectors/shapermint/: config.yml  connector.py  mappings.py
app/connectors/skims/: config.yml  connector.py  mappings.py
app/connectors/spanx/: config.yml  connector.py  html_utils.py  mappings.py
app/connectors/wacoal/: config.yml  connector.py  html_utils.py  mapping.py
app/core/: config.py  events.py  exceptions.py  logger.py  market.py
app/exports/: csv_exporter.py  excel_exporter.py  json_exporter.py  pdf_exporter.py
app/processing/: change_detector.py  classifier.py  enricher.py  normalizer.py
app/scraping/: anti_block.py  engine.py  http_client.py  pagination.py  shopify_connector_mixin.py  shopify_utils.py
app/storage/: database.py  models.py  repository.py
app/storage/migrations/: env.py
app/ui/: main_window.py
app/ui/views/: brands.py  dashboard.py  history.py  results.py  settings.py
app/ui/widgets/: connector_wizard.py
app/workflow/: reporter.py  runner.py  scheduler.py  session.py
taxonomies/: body_zones.yml  color_normalization.yml  compression_levels.yml  shapewear.yml  size_normalization.yml
tests/fixtures/: sample_products.py
tests/unit/: test_change_detector.py  test_classifier.py  test_normalizer.py
tools/debug/: debug.py  find_lock.sh
validation/: db_fields_panel.py
